making sense of the code so far
adding numbers to the classes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     oUITS Resources
   </title>
 </head>
-<!--style="color:rgba(0, 0, 0, 0.249);"-->
 
 <body style="background-color:rgb(225, 230, 241);">
+
+<!-- TOP BAR -->
+
   <div class="topnav">
     <a class="active" href=page-depth-01\Tutorials.html><small>Resources<br>Tutorials</small></a>
     <a class="active" href=page-depth-01\References.html><small>References<br>(updates)</small></a>
@@ -18,7 +20,14 @@
     <!--<a class="active" href="#home">Home</a>-->
 
   </div>
+
+<!-- GO BOTTOM RELATIVE LINK -->
+
 <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
+
+
+<!-- BLOGGER IFRAMER -->
+
 
   <table border="10" align=center style="width:90%;">
     <tr>
@@ -50,6 +59,9 @@
 
   <hr>
 
+
+  <!-- GOOGLE DRIVE IFRAME -->
+
   <table border="10" align="center" style=" width:70%">
     <tr>
 
@@ -75,7 +87,7 @@
     </tr>
   </table>
 
-
+<!-- HIGHLIGHTS OF DRIVE -->
 
   <table align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
     <tr>
@@ -119,6 +131,7 @@
   <br>
   <br>
 
+  <!-- SOCIAL LINKS -->
 
   <h3 align=center>Socials? </h3>
   <table align=center>
@@ -131,15 +144,23 @@
             alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a></th>
     </tr>
   </table>
+
+<!-- ANON NOTE (FEEDBACK) -->
+
 <p align=center ><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8"  target="_blank" style="color:rgb(0, 0, 0);">( Leave a note? )</a></p>
 
 <p align=center ><a href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing" target="_blank" style="color:rgba(0, 0, 0, 0.14);"><small>( See note? )</small></a></p>
+
+
+<!-- BOTTOM CREDITS -->
 
 <table align="center" style="width:60%">
   <td><p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the <b>UNOFFICIAL</b>
       Online
       Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them but please be mindful of possible Legal issues (like Copyright materials)</small></p></td></table>
   <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
+
+<!-- GO TOP RELATIVE LINK -->
 
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
 
