--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@
   <table border="10" align=center style="width:90%;">
     <tr>
       <th>
+
+        <!-- "topnav3" -->
+
         <div class="topnav3">
           <font size="24"></font>
           <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>Latest Blog</i></p>
           </font>
         </div>
+
+        <!-- "top-bar2" -->
+
         <div class="top-bar2">
           <div class="iframe-container2">
             <iframe src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
@@ -47,6 +53,9 @@
       </th>
     </tr>
   </table>
+
+
+  <!-- BOTTOM BAR "navbar" -->
 
   <div style="padding-left:16px">
   </div>
