--- a/index.html
+++ b/index.html
@@ -110,40 +110,63 @@
     }
 </script>
 
-  <!-- HIGHLIGHTS OF DRIVE -->
 
-  <table align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
-    <tr>
-      <p align=center style="color: rgba(0, 0, 0, 0.594);"> ( Highlights? ) </p>
-    </tr>
-    <tr>
-      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
-        <a style="color:rgba(60, 60, 82, 0.733);"
-          href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE
-          Files</a>
-      </td>
-      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
-        <a style="color:rgba(60, 60, 82, 0.733);"
-          href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified
-          Library Questions</a>
-      </td>
-      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
-        <a style="color:rgba(60, 60, 82, 0.733);"
-          href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine
-          Format</a>
-      </td>
-      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
-        <a style="color:rgba(60, 60, 82, 0.733);"
-          href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated
-          Book List</a>
-      </td>
-      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
-        <a style="color:rgba(60, 60, 82, 0.733);"
-          href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming
-          References</a>
-      </td>
-    </tr>
-  </table>
+<!-- HIGHLIGHTS OF DRIVE -->
+
+  <div class="container">
+    <p class="drive-link" align="center">
+        <i>
+          <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
+            href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small><b>(
+                Link to the Google Drive? )</b></small></a></i></p>
+            </a>
+        </i>
+    </p>
+  </div>
+
+
+  <br><br><br>
+
+    
+
+    <div class="container-5">
+    <table class="resources-table-5"  align="center" style="width:90%;">
+        <tr>
+          <p class="highlights" align="center" style = "color: rgba(240, 248, 255, 0.649);">( Highlights? )</p>
+        </tr>
+      <tr>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">
+                    CSE Files
+                </a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">
+                    Modified Library Questions
+                </a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">
+                    Routine Format
+                </a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
+                    Curated Book List
+                </a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">
+                    Programming References
+                </a>
+            </td>
+        </tr>
+    </table>
+  </div>
+
+
+
+
   <hr>
 
 
