--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </title>
 </head>
 
-<body style="background-color:rgb(225, 230, 241);">
+<body style="background-color:rgba(218, 237, 255, 0.343);">
 
   <!-- TOP BAR -->
 
@@ -30,16 +30,16 @@
   <!-- BLOGGER IFRAMER -->
 
 
-  <table border="10" align=center style="width:90%;">
+  <table border="10" align=center style="width:90%; max-width: 860px;">
     <tr>
       <th>
 
         <!-- "topnav3" -->
 
         <div class="topnav3">
-          <font size="24"></font>
-          <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>Latest Blog</i></p>
-          </font>
+          <h2>
+          <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
+          </h2>
         </div>
 
         <!-- "top-bar2" -->
