--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
   </table>
 
 
-
-
-
-
   <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
+
+  <script src="myscripts.js"></script>
 
   <table border="10" align="center" style="width:100%;">
     <tr>
@@ -84,32 +82,6 @@
     </tr>
 </table>
 
-<script>
-    let currentZoom = 1;
-    const iframe = document.querySelector('.iframe-4');
-
-    function zoomIn() {
-        currentZoom += 0.1;
-        updateZoom();
-    }
-
-    function zoomOut() {
-        if (currentZoom > 0.5) {
-            currentZoom -= 0.1;
-            updateZoom();
-        }
-    }
-
-    function resetZoom() {
-        currentZoom = 1;
-        updateZoom();
-    }
-
-    function updateZoom() {
-        iframe.style.transform = `scale(${currentZoom})`;
-    }
-</script>
-
 
 <!-- HIGHLIGHTS OF DRIVE -->
 
@@ -124,10 +96,9 @@
     </p>
   </div>
 
-
-  <br><br><br>
-
-    
+  <br>
+  <br>
+  <br>
 
     <div class="container-5">
     <table class="resources-table-5"  align="center" style="width:90%;">
@@ -163,12 +134,6 @@
         </tr>
     </table>
   </div>
-
-
-
-
-  <hr>
-
 
   <br>
   <br>
