cramped Socials and END Credits together

--- a/archive.html
+++ b/archive.html
@@ -39,6 +39,38 @@
 
 
 <br><br>
+
+<hr>
+
+
+
+<!-- SOCIAL LINKS -->
+
+<h4 align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </h4>
+<table align=center>
+  <tr>
+    <th><a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
+          alt="Discord Server (Protein Shake)" width="100" height="100"></a></th>
+    <th><a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
+          alt="Telegram Channel (oUITS - Online Resources and Updates)" width="100" height="100"></a></th>
+    <th><a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
+          alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a></th>
+  </tr>
+</table>
+  <!-- BOTTOM CREDITS -->
+
+  <table align="center" style="width:60%">
+    <td>
+      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
+          <b>UNOFFICIAL</b>
+          Online
+          Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
+            href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+            Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them but
+          please be mindful of possible Legal issues (like Copyright materials)</small></p>
+    </td>
+  </table>
+
 <hr>
 
 <!-- GOOGLE DRIVE IFRAME -->
@@ -67,6 +99,42 @@
               Link to the Google Drive? )</b></small></a></i></p>
   </tr>
 </table>
+<hr>
+
+  <!-- HIGHLIGHTS OF DRIVE -->
+
+  <table align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
+    <tr>
+      <p align=center style="color: rgba(0, 0, 0, 0.594);"> ( Highlights? ) </p>
+    </tr>
+    <tr>
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE
+          Files</a>
+      </td>
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified
+          Library Questions</a>
+      </td>
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine
+          Format</a>
+      </td>
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated
+          Book List</a>
+      </td>
+      <td align=center style="width:50%;border-color:rgba(60, 60, 82, 0.733);">
+        <a style="color:rgba(60, 60, 82, 0.733);"
+          href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming
+          References</a>
+      </td>
+    </tr>
+  </table>
 
 <hr>
 
