--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="topnav3">
           <h2>
-          <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
+            <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
           </h2>
         </div>
 
@@ -62,125 +62,122 @@
 
   <table border="10" align="center" style="width:100%;">
     <tr>
-        <td>
-            <div class="container-4">
-                <div class="iframe-wrapper-4">
-                    <div class="iframe-controls-4">
-                        <button class="button-4" onclick="zoomIn()">Zoom In</button>
-                        <button class="button-4" onclick="zoomOut()">Zoom Out</button>
-                        <button class="button-4" onclick="resetZoom()">Reset</button>
-                    </div>
-                    <iframe 
-                        class="iframe-4"
-                        src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"
-                        allowfullscreen
-                        sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
-                    </iframe>
-                </div>
+      <td>
+        <div class="container-4">
+          <div class="iframe-wrapper-4">
+            <div class="iframe-controls-4">
+              <button class="button-4" onclick="zoomIn()">Zoom In</button>
+              <button class="button-4" onclick="zoomOut()">Zoom Out</button>
+              <button class="button-4" onclick="resetZoom()">Reset</button>
             </div>
-        </td>
+            <iframe class="iframe-4"
+              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"
+              allowfullscreen sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
+            </iframe>
+          </div>
+        </div>
+      </td>
     </tr>
-</table>
+  </table>
 
 
-<!-- HIGHLIGHTS OF DRIVE -->
+  <!-- HIGHLIGHTS OF DRIVE -->
+
+  <div class="container-5">
+    <table class="resources-table-5" align="center" style="width:90%;">
+      <tr>
+        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">( Highlights? )</p>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">
+            CSE Files
+          </a>
+        </td>
+        <td>
+          <a href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">
+            Modified Library Questions
+          </a>
+        </td>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">
+            Routine Format
+          </a>
+        </td>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
+            Curated Book List
+          </a>
+        </td>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">
+            Programming References
+          </a>
+        </td>
+      </tr>
+    </table>
+  </div>
 
   <div class="container">
     <p class="drive-link" align="center">
-        <i>
-          <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
-            href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small><b>(
-                Link to the Google Drive? )</b></small></a></i></p>
-            </a>
-        </i>
+      <i>
+        <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
+              href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+              target="_blank"><small><b>(
+                  Link to the Google Drive? )</b></small></a></i></p>
+        </a>
+      </i>
     </p>
   </div>
 
   <br>
   <br>
   <br>
-
-    <div class="container-5">
-    <table class="resources-table-5"  align="center" style="width:90%;">
-        <tr>
-          <p class="highlights" align="center" style = "color: rgba(240, 248, 255, 0.649);">( Highlights? )</p>
-        </tr>
-      <tr>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">
-                    CSE Files
-                </a>
-            </td>
-            <td>
-                <a href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">
-                    Modified Library Questions
-                </a>
-            </td>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">
-                    Routine Format
-                </a>
-            </td>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
-                    Curated Book List
-                </a>
-            </td>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">
-                    Programming References
-                </a>
-            </td>
-        </tr>
-    </table>
-  </div>
-
-  <br>
-  <br>
-  <br>
   <br>
   <br>
   <br>
 
-  <!-- SOCIAL LINKS -->
+  <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
-  <h3 align=center>Socials? </h3>
-  <table align=center>
+  <table align="center" style="width:60%">
+    
     <tr>
+      <!-- SOCIAL LINKS -->
+      <th>
       <th><a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
             alt="Discord Server (Protein Shake)" width="100" height="100"></a></th>
       <th><a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
             alt="Telegram Channel (oUITS - Online Resources and Updates)" width="100" height="100"></a></th>
       <th><a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
             alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a></th>
+      </th>
+      <th style="min-width:250px;">
+
+        <!-- BOTTOM CREDITS -->
+        <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
+            <b>UNOFFICIAL</b>
+            Online
+            Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
+              href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+              Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
+            but
+            please be mindful of possible Legal issues (like Copyright materials)</small></p>
+      </th>
     </tr>
   </table>
 
+  
+
   <!-- ANON NOTE (FEEDBACK) -->
 
-  <p align=center><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank" style="color:rgb(0, 0, 0);">( Leave a
-      note? )</a></p>
+  <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank" style="color:rgba(0, 0, 0, 0.534);">( Leave a
+      note? )</a>....<a
+        href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
+        target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
 
-  <p align=center><a
-      href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
-      target="_blank" style="color:rgba(0, 0, 0, 0.14);"><small>( See note? )</small></a></p>
-
-
-  <!-- BOTTOM CREDITS -->
-
-  <table align="center" style="width:60%">
-    <td>
-      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
-          <b>UNOFFICIAL</b>
-          Online
-          Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
-            href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-            Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them but
-          please be mindful of possible Legal issues (like Copyright materials)</small></p>
-    </td>
-  </table>
-  <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.801);">Click Here to see work in progress</a></p>
-
+      <p align=center></p>
+  
+    <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
   <!-- GO TOP RELATIVE LINK -->
 
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
