removed Zoom functionality but kept the js file

--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
 
   <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
 
-  <script src="myscripts.js"></script>
+  <!-- <script src="myscripts.js"></script> -->
 
   <table border="10" align="center" style="width:100%;">
     <tr>
       <td>
         <div class="container-4">
           <div class="iframe-wrapper-4">
-            <div class="iframe-controls-4">
+            <!-- <div class="iframe-controls-4">
               <button class="button-4" onclick="zoomIn()">Zoom In</button>
               <button class="button-4" onclick="zoomOut()">Zoom Out</button>
               <button class="button-4" onclick="resetZoom()">Reset</button>
-            </div>
+            </div> -->
             <iframe class="iframe-4"
               src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"
               allowfullscreen sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
