--- a/index.html
+++ b/index.html
@@ -139,45 +139,48 @@
 
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
-  <table align="center" style="width:60%">
-    
-    <tr>
+
+  <div align="center">
+    <div>
       <!-- SOCIAL LINKS -->
-      <th>
-      <th><a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
-            alt="Discord Server (Protein Shake)" width="100" height="100"></a></th>
-      <th><a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
-            alt="Telegram Channel (oUITS - Online Resources and Updates)" width="100" height="100"></a></th>
-      <th><a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
-            alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a></th>
-      </th>
-      <th style="min-width:250px;">
+      <p align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </p>
+      <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
+          alt="Discord Server (Protein Shake)" width="70" height="70"></a>
+      <a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
+          alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
+      <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
+          alt="Facebook Group (oUITS - Online Resources)" width="80" height="80"></a>
+      <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank"
+          style="color:rgba(0, 0, 0, 0.818);">Leave a
+          note?</a>....<a
+          href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
+          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
 
-        <!-- BOTTOM CREDITS -->
-        <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
-            <b>UNOFFICIAL</b>
-            Online
-            Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
-              href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-              Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
-            but
-            please be mindful of possible Legal issues (like Copyright materials)</small></p>
-      </th>
-    </tr>
-  </table>
+    </div>
+    <br>
+    <div style="min-width: 200px;width:60% ;">
+      <!-- BOTTOM CREDITS -->
+      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
+          <b>UNOFFICIAL</b>
+          Online
+          Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
+            href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+            Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
+          but
+          please be mindful of possible Legal issues (like Copyright materials)</small></p>
+    </div>
+  </div>
 
-  
+
+
 
   <!-- ANON NOTE (FEEDBACK) -->
 
-  <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank" style="color:rgba(0, 0, 0, 0.534);">( Leave a
-      note? )</a>....<a
-        href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
-        target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
 
-      <p align=center></p>
-  
-    <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
+
+  <p align=center></p>
+
+  <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
   <!-- GO TOP RELATIVE LINK -->
 
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
