--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
 
 
-  <!-- BLOGGER IFRAMER -->
+  <!-- BLOGGER IFRAME -->
 
 
   <table border="10" align=center style="width:90%; max-width: 860px;">
@@ -65,6 +65,10 @@
       <td>
         <div class="container-4">
           <div class="iframe-wrapper-4">
+            <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
+              href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+              target="_blank"><small><b>(
+                  Link to the Google Drive? )</b></small></a></p>
             <!-- <div class="iframe-controls-4">
               <button class="button-4" onclick="zoomIn()">Zoom In</button>
               <button class="button-4" onclick="zoomOut()">Zoom Out</button>
@@ -116,18 +120,6 @@
         </td>
       </tr>
     </table>
-  </div>
-
-  <div class="container">
-    <p class="drive-link" align="center">
-      <i>
-        <p align=center><i><a style="color:rgba(60, 60, 82, 0.733);"
-              href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-              target="_blank"><small><b>(
-                  Link to the Google Drive? )</b></small></a></i></p>
-        </a>
-      </i>
-    </p>
   </div>
 
   <br>
