--- a/abstraction/lorep-ipsum.html
+++ b/abstraction/lorep-ipsum.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <p align=center><a href =../index.html >Go back</a></p>
     <ul id ="index">
 Lorem index
 <li><a href = "#L1">Go to Lorem 1</a></li>
@@ -116,7 +117,7 @@ Lorem index
     <br><br>
     <hr>
     <br><br>
-    <a href=lab3-task-1-UITS.html>Go back</a>
+    <p align=center><a href =../index.html >Go back</a></p>
 </body>
 
 </html>
