--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <b>UNOFFICIAL</b>
           Online
           Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
-            href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+            href="https://github.com/b1tranger/oUITS-Resources" style="color:rgba(4, 0, 128, 0.806);">GitHub's
             Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
