--- a/abstraction/wip.html
+++ b/abstraction/wip.html
@@ -82,11 +82,13 @@
 <body>
 <h1 id="top" align = center> 
     (wip page)</h1>
-<p align=center><a href =index.html >Go back</a></p>
-<p align=center><a href ="archive.html" >Go to Archvie</a></p>
+<p align=center><a href =../index.html >Go back</a></p>
+<p align=center><a href =archive.html >Go to Archvie</a></p>
 <p align=center><a href ="#end" >Go to end</a></p>
 <p align=center><a href ="tmp/blog-preview-topbar-rounded.html" >Go to temp</a></p>
-<hr>
+
+
+<hr><!----------------------------------------------------------------- -->
 
 
 
@@ -105,8 +107,9 @@
 
 
 
+ <hr>
+<!----------------------------------------------------------------- -->
 
-<hr>
 
 <p>(trying top bar from w3schools)</p>
 
@@ -123,22 +126,11 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <br><br>
-<hr>
+
+<hr><!----------------------------------------------------------------- -->
+
+
 <p>(trying to fit it all in a table)</p>
 <!--<h3 align = center>Primary Directories?</h3>-->
 <br>
@@ -182,7 +174,9 @@
 <br>
 
 
-<hr>
+<hr><!----------------------------------------------------------------- -->
+
+
 <p align = center> 
     These are Relative URLs
 </p>
@@ -200,7 +194,11 @@
   <iframe src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list" style="width:100%; height:500px; border:0;"></iframe>
    
 <br><br><br><br>
-<hr>
+
+
+<hr><!----------------------------------------------------------------- -->
+
+
 <div class="sidenav">
   <a href="#about">About</a>
   <a href="#services">Services</a>
@@ -218,10 +216,11 @@
 </div>
 <br><br><br><br>
 
+<hr> <!----------------------------------------------------------------- -->
 
 
 <p id="end" align="center">end</p>
-<p align=center><a href =index.html >Go back</a></p>
+<p align=center><a href =../index.html >Go back</a></p>
 <p align=center><a href ="#top">Go to top</a></p>
 <p align=center><a href =archive.html>Go to archive</a></p>
 </body>
