--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
 
   <p align=center></p>
 
-  <p align=center><a href=wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
+  <p align=center><a href=abstraction\wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
+
+  
   <!-- GO TOP RELATIVE LINK -->
 
   <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
