--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   <p align=center></p>
 
-  <p align=center><a href=abstraction\wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
+  <p align=center><a href=abstraction/wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in progress</a></p>
 
   
   <!-- GO TOP RELATIVE LINK -->
