--- a/abstraction/archive.html
+++ b/abstraction/archive.html
@@ -31,16 +31,18 @@
     Image Page
 </title>
 </head>
+
+
 <body>
 <h1 id="top" align = center> 
     (wip page)</h1>
-<p align=center><a href =index.html >Go back</a></p>
+<p align=center><a href =../index.html >Go back</a></p>
 <p align=center><a href ="#end" >Go to end</a></p>
 
 
 <br><br>
 
-<hr>
+<hr><!----------------------------------------------------------------- -->
 
 
 
@@ -57,6 +59,9 @@
           alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a></th>
   </tr>
 </table>
+
+<hr><!----------------------------------------------------------------- -->
+
   <!-- BOTTOM CREDITS -->
 
   <table align="center" style="width:60%">
@@ -71,7 +76,7 @@
     </td>
   </table>
 
-<hr>
+<hr><!----------------------------------------------------------------- -->
 
 <!-- GOOGLE DRIVE IFRAME -->
 
@@ -99,7 +104,9 @@
               Link to the Google Drive? )</b></small></a></i></p>
   </tr>
 </table>
-<hr>
+
+
+<hr><!----------------------------------------------------------------- -->
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
@@ -136,7 +143,7 @@
     </tr>
   </table>
 
-<hr>
+<hr><!----------------------------------------------------------------- -->
 
 <ul>External Sources?
   <li><a href=page-depth-01\References.html>See References for Future Updates</a></li>
@@ -148,7 +155,7 @@
 
 
 
-<hr>
+<hr><!----------------------------------------------------------------- -->
 
 <p><a href= "https://codeforces.com/"><img src = codeforces-sponsored-by-ton.png alt = "CodeForces" width=555 height=130></a></p>
 <br>
@@ -159,7 +166,9 @@
 
 
 
-<hr>
+<hr><!----------------------------------------------------------------- -->
+
+
 <h1 align = center> 
   This is an image
 </h1>
@@ -167,23 +176,13 @@
 <p><img alt="this is an alt text" width="=100" height="100"></p>
 <br>
 <br>
-<a href =index.html>Go back to index</a>
+<a href =../index.html>Go back to index</a>
 <br><br>
 <a href =wip.html>Go back to wip</a>
 
 
 
-
-
-
-
-
-
-
-
-
-
-<hr>
+<hr><!----------------------------------------------------------------- -->
 
 <table style="border: 1px solid rgba(31, 106, 168, 0);" align="center">
   <tr>
@@ -213,7 +212,9 @@
   </tr>
 
 </table>
-<hr>
+
+<hr><!----------------------------------------------------------------- -->
+
 <p>(trying to fit it all in a table)</p>
 <h3 align = center>Primary Directories?</h3>
 <br>
@@ -247,6 +248,8 @@
   <br><li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources) </a></li>
     <br>
   </i></ul>
+
+  
 </body>
 
 </html>
