fixed view more button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
 
+  <!-- <div class="scroll-text">This is scrolling text.</div> -->
 
   <!-- BLOGGER IFRAME -->
 
@@ -46,11 +47,12 @@
 
         <div class="top-bar2">
           <div class="iframe-container2">
-            <iframe src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
+            <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
           </div>
-          <div class="overlay2"></div>
-          <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link2" target="_blank">View More</a>
+          
         </div>
+        <div class="overlay2"></div>
+          <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link2" target="_blank">View More</a>
       </th>
     </tr>
   </table>
