--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
   <!-- TOP BAR -->
 
   <div class="topnav">
-    <a class="active" href=page-depth-01\Tutorials.html><small>Resources<br>Tutorials</small></a>
-    <a class="active" href=page-depth-01\References.html><small>References<br>(updates)</small></a>
-    <a class="active" href="https://b1tranger-coding.blogspot.com/"><small>Coding<br>Blogs</small></a>
-    <!--<a class="active" href="#home">Home</a>-->
-
-  </div>
+    <a class="active" href="page-depth-01/Tutorials.html">
+        <small>Resources<br>Tutorials</small>
+    </a>
+    <a class="active" href="page-depth-01/References.html">
+        <small>References<br>(updates)</small>
+    </a>
+    <a class="active" href="https://b1tranger-coding.blogspot.com/">
+        <small>Coding<br>Blogs</small>
+    </a>
+</div>
 
   <!-- GO BOTTOM RELATIVE LINK -->
 
