fixed z-index issue
iframe after adding scroll effect made clickable links broken

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
   <!-- TOP BAR -->
 
-  <div class="topnav">
-    <a class="active" href="page-depth-01/Tutorials.html">
+  <div class="topnav-1">
+    <a class="active-1" href="page-depth-01/Tutorials.html">
         <small>Resources<br>Tutorials</small>
     </a>
-    <a class="active" href="page-depth-01/References.html">
+    <a class="active-1" href="page-depth-01/References.html">
         <small>References<br>(updates)</small>
     </a>
-    <a class="active" href="https://b1tranger-coding.blogspot.com/">
+    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
         <small>Coding<br>Blogs</small>
     </a>
 </div>
@@ -41,7 +41,7 @@
 
         <!-- "topnav3" -->
 
-        <div class="topnav3">
+        <div class="topnav-3">
           <h2>
             <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
           </h2>
@@ -49,14 +49,14 @@
 
         <!-- "top-bar2" -->
 
-        <div class="top-bar2">
-          <div class="iframe-container2">
+        <div class="top-bar-2">
+          <div class="iframe-container-2">
             <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
           </div></div>
       
        
-        <div class="overlay2"></div>
-          <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link2" target="_blank">View More</a>
+        <div class="overlay-2"></div>
+          <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
       </th>
     </tr>
   </table>
