--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <div style="padding-left:16px">
   </div>
-  <div class="navbar">
+  <div class="navbar-5">
     <font size="24"></font>
     <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
     </font>
