added separate page for CSE-Files

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <button class="button-4" onclick="resetZoom()">Reset</button>
             </div> -->
             <iframe class="iframe-4"
-              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"
+              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
               allowfullscreen sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
             </iframe>
           </div>
@@ -100,7 +100,7 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">
+          <a href="page-depth-01/CSE-Files.html">
             CSE Files
           </a>
         </td>
